<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:id="@+id/content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/center_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Myfragment"
        android:layout_above="@+id/button"
        android:textColor="#009688"
        android:textSize="78px" />

    <LinearLayout
        android:id="@+id/button"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/play"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/play" />
        <Button
            android:id="@+id/pause"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pause"/>

        <Button
            android:id="@+id/stop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/stop" />
            >
    </LinearLayout>

</RelativeLayout>